--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
         "react-scripts": "5.0.0",
+        "react-spinners": "^0.11.0",
         "sass": "^1.45.0",
         "stylelint": "14.1.0",
         "stylelint-config-idiomatic-order": "8.1.0",
