--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-scripts": "5.0.0",
         "react-select": "^5.2.1",
         "react-spinners": "^0.11.0",
+        "react-toastify": "^8.1.0",
         "sass": "^1.45.0",
         "stylelint": "14.1.0",
         "stylelint-config-idiomatic-order": "8.1.0",
