--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-bootstrap": "^2.1.0",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
+        "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "react-select": "^5.2.1",
         "react-spinners": "^0.11.0",
