--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "ag-grid-community": "^26.2.1",
+        "ag-grid-react": "^26.2.0",
         "bootstrap": "^5.1.3",
         "classnames": "^2.3.1",
         "eslint-config-prettier": "8.3.0",
