--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "dependencies": {
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.16",
+        "@fullcalendar/daygrid": "^5.10.1",
+        "@fullcalendar/react": "^5.10.1",
+        "@fullcalendar/timegrid": "^5.10.1",
         "@reduxjs/toolkit": "^1.7.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
