--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.16",
         "@fullcalendar/daygrid": "^5.10.1",
+        "@fullcalendar/interaction": "^5.10.1",
         "@fullcalendar/react": "^5.10.1",
         "@fullcalendar/timegrid": "^5.10.1",
         "@reduxjs/toolkit": "^1.7.1",
